--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body style="background-color:antiquewhite">
+<body>
   <noscript>
     <strong>We're sorry but abang doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
